use configProperties annotation

--- a/springboot09/src/test/resources/configprops-test.properties
+++ b/springboot09/src/test/resources/configprops-test.properties
@@ -1,3 +1,8 @@
+mail.credentials.auth_method=demo
+#mail.credentials.auth-method
+#mail.credentials_AUTH_METHOD
+#mail.CREDENTIALS_AUTH_METHOD
+
 #Simple properties
 mail.host=mailer@mail.com
 mail.port=9000
@@ -14,4 +19,4 @@ mail.additionalHeaders.secure=true
 #Object properties
 mail.credentials.username=john
 mail.credentials.password=password
-mail.credentials.authMethod=SHA1
+#mail.credentials.authMethod=SHA1
